Fix scrollbars for firefox

--- a/app/assets/stylesheets/pizzeria/components/modals.sass
+++ b/app/assets/stylesheets/pizzeria/components/modals.sass
@@ -24,6 +24,7 @@
   padding-right: 0 !important
   .modal
     +scrollbar
+    overflow-x: auto
     overflow-x: overlay
 
 .modal-dialog
