--- a/app/assets/stylesheets/pizzeria/components/scaffolding.sass
+++ b/app/assets/stylesheets/pizzeria/components/scaffolding.sass
@@ -75,6 +75,7 @@ body
     height: 20px
   .navmenu-scroll-area
     +calc(height, '100% - 70px')
+    overflow: auto
     overflow: overlay
     padding-bottom: 60px
   .navmenu-bottom-area
