--- a/app/assets/stylesheets/web-admin/components/all.sass
+++ b/app/assets/stylesheets/web-admin/components/all.sass
@@ -157,6 +157,7 @@
     .ui-content-wrapper
       bottom: 0
       left: 0
+      overflow: auto
       overflow: overlay
       pointer-events: all
       position: absolute
